e2_backend.tf
# Optional: an example of a simple EC2 resource for demonstration
# You can remove this block if you do not need to deploy EC2 for TASK 1.
#resource "aws_instance" "example_instance" {
#  ami           = var.ami_id           # AMI ID From the variable
#  instance_type = var.instance_type    # Type of specimen from the variable

#  tags = {
#    Name        = "Task1-TestInstance" # Tag for resource identification
#    Environment = "DevOpsCourse"
#  }
#}
